2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* PyBinding/Resources/PyBinding.addin.xml: Bump MD version.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/Resources/PyBinding.addin.xml: Track movement of parser 
	  extension point.

2008-10-17  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/Makefile: Fix install path.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* configure: Fix tarball name.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/PyBinding.Gui/PythonEditorIndentation.cs: Don't break the 
	  text editor extension chain for non-python files.

2008-10-09  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PyBinding.Gui/PythonEditorIndentation.cs: Only indent if
	the file is python.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/PyBinding.Gui/PythonEditorCompletion.cs:
	* PyBinding/PyBinding.Completion/PythonCompletionDataProvider.cs: Track
	APIs.

	* PyBinding/Makefile:
	* PyBinding/PyBinding.mdp: Updated.

2008-10-09  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PyBinding.Parser.Dom/PythonParsedDocument.cs:
	* PyBinding/PyBinding/PythonHelper.cs: Handle null/empty directories and
	filenames.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/PyBinding.Completion/PythonCompletionDataProvider.cs: Track
	CompletionData API.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/Makefile:
	* PyBinding/PyBinding.mdp: Fix output directory.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile:
	* configure:
	* rules.make:
	* Makefile.include:
	* PyBinding/Makefile:
	* PyBinding/PyBinding.mdp:
	* PyBinding/gtk-gui/gui.stetic:
	* PyBinding/monodevelop-pybinding.pc.in: Add makefile build system. Set
	GTK# version to 2.8.

2008-10-08	Christian Hergert	<chris@dronelabs.com>

	* .: Initial import
