@@ -1,4 +1,5 @@
 <Combine name="PyBinding" fileversion="2.0">
+  <Policies />
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
       <Entry build="True" name="PyBinding" configuration="Debug" />
