@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -141,7 +141,6 @@ namespace PyBinding.Gui {
             this.m_PathsTreeView = new Gtk.TreeView();
             this.m_PathsTreeView.CanFocus = true;
             this.m_PathsTreeView.Name = "m_PathsTreeView";
-            this.m_PathsTreeView.HeadersClickable = true;
             w8.Add(this.m_PathsTreeView);
             this.scrolledwindow1.Add(w8);
             this.hbox1.Add(this.scrolledwindow1);
