@@ -1,3 +1,9 @@
+2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>
+
+ * PyBinding.mdp:
+ * gtk-gui/generated.cs:
+ * gtk-gui/PyBinding.Gui.PythonOptionsWidget.cs: Flush.
+
 2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* PyBinding.mdp: Update target framework.
